[gd_scene load_steps=21 format=3 uid="uid://bw5bo38i7sv8c"]

[ext_resource type="Script" path="res://Scripts/Character_Scripts/chaser_dogg.gd" id="1_u7a4c"]
[ext_resource type="Texture2D" uid="uid://cnbd4cjru6b61" path="res://Artwork/Character_Sprites/Enemy_Sprites/Idle.png" id="2_76eun"]
[ext_resource type="Texture2D" uid="uid://5w51jroeosyl" path="res://Artwork/Character_Sprites/Enemy_Sprites/Attack.png" id="3_xre4i"]
[ext_resource type="Texture2D" uid="uid://bdpowb8fdu1hb" path="res://Artwork/Character_Sprites/Enemy_Sprites/Walk.png" id="4_2iukc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lhnlb"]
atlas = ExtResource("2_76eun")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwver"]
atlas = ExtResource("2_76eun")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nayxx"]
atlas = ExtResource("2_76eun")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbfsl"]
atlas = ExtResource("2_76eun")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gnnq"]
atlas = ExtResource("3_xre4i")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d336q"]
atlas = ExtResource("3_xre4i")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s17h7"]
atlas = ExtResource("3_xre4i")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwvig"]
atlas = ExtResource("3_xre4i")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltlij"]
atlas = ExtResource("4_2iukc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqruj"]
atlas = ExtResource("4_2iukc")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v4ex"]
atlas = ExtResource("4_2iukc")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_208jk"]
atlas = ExtResource("4_2iukc")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0jx1"]
atlas = ExtResource("4_2iukc")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dtxi"]
atlas = ExtResource("4_2iukc")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_gbgie"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhnlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwver")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nayxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbfsl")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gnnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d336q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s17h7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwvig")
}],
"loop": false,
"name": &"dog_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltlij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqruj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v4ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_208jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0jx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dtxi")
}],
"loop": true,
"name": &"run_right",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0itdf"]
radius = 3.49996
height = 19.995

[node name="Chaser_Dogg" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(2, 2)
script = ExtResource("1_u7a4c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.5, 0)
sprite_frames = SubResource("SpriteFrames_gbgie")
animation = &"run_right"
offset = Vector2(-11, -17)
flip_h = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-3, 18)
collision_priority = 0.0

[node name="RightProjectileArea" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(-2, -22.5)
polygon = PackedVector2Array(-10, -2, -14, 0.5, -12.5, 9, -3.5, 9.5, 0.5, 5.5, 6, 13, 17.5, 12.5, 18, 6.5, 17, -3, 20.5, -5, 27.5, -5, 26.5, -11.5, 22, -17, 15.5, -16.5, 15.5, -11.5, 6.5, -7.5, -12, -8.5, -12, -4.5)

[node name="LeftProjectileArea" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(-3, -24.5)
polygon = PackedVector2Array(-10.5, -14.5, -19, -14.5, -20.5, -9.5, -23.5, -6, -21.5, -2.5, -14.5, -2, -12, 3, -14, 12, -11.5, 13.5, -0.5, 15, 1, 13, 1.5, 7.5, 7, 7, 10, 11.5, 18, 11, 20, 2, 15, -0.5, 17.5, -5, 14.5, -7, 0, -6, -9.5, -9)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Nav_Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="attack_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 2)
rotation = 1.57556
shape = SubResource("CapsuleShape2D_0itdf")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Nav_Timer" to="." method="_on_nav_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
